# cameroon-land-cover-mapping

./: .gitignore  README.md  pyproject.toml
data/: cameroon.geojson
notebooks/: main.ipynb
