[tool.poetry]
name = "cameroon-land-cover-mapping"
version = "0.1.0"
description = ""
authors = ["sampath kovvali <118274231+sampath017@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "cameroon_land_cover_mapping"}]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.7.0.72"
sentinelsat = "^1.1.1"
numpy = "1.24"
sentinelhub = "^3.8.4"
utm = "^0.7.0"
rasterio = "^1.3.6"
jupyterlab = "^3.6.1"
pandas = "^1.5.3"
matplotlib = "^3.7.1"
ipywidgets = "^8.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
